# aliro

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  requirements.txt
.github/workflows/: build.yml  lint.yml
cmake/: AliroOptions.cmake  AliroVersion.cmake  FindPCSC.cmake
docs/superpowers/plans/: 2026-06-17-aliro-scaffolding-and-core.md
docs/superpowers/specs/: 2026-06-17-aliro-cpp-library-design.md
examples/: CMakeLists.txt  device_demo.cpp  reader_demo.cpp
modules/core/: CMakeLists.txt
modules/core/include/aliro/core/: accessDataElement.h  accessDocument.h  accessRule.h  apdu.h  cbor.h  issuerAuth.h  log.h  protocol.h  revocationDocument.h  tlv.h  types.h
modules/core/src/: accessDocument.cpp  apdu.cpp  cbor.cpp  issuerAuth.cpp  log.cpp  revocationDocument.cpp  tlv.cpp
modules/crypto/: CMakeLists.txt
modules/crypto/include/aliro/crypto/: iCryptoProvider.h  keySerializer.h  keyTypes.h  mbedTlsCryptoProvider.h  openSslCryptoProvider.h  secureChannel.h
modules/crypto/src/: keySerializer.cpp  mbedTlsCryptoProvider.cpp  openSslCryptoProvider.cpp  secureChannel.cpp
modules/device/: CMakeLists.txt
modules/device/include/aliro/device/: deviceSession.h
modules/device/src/: deviceSession.cpp
modules/reader/: CMakeLists.txt
modules/reader/include/aliro/reader/: readerSession.h
modules/reader/src/: readerSession.cpp
modules/transport/: CMakeLists.txt
modules/transport/include/aliro/transport/: iTransport.h  pcscTransport.h  simTransport.h
modules/transport/src/: pcscTransport.cpp  simTransport.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  sessionFlowTest.cpp
tests/unit/: CMakeLists.txt
tests/unit/core/: CMakeLists.txt  accessDocumentTest.cpp  apduTest.cpp  cborTest.cpp  issuerAuthTest.cpp  logTest.cpp  revocationDocumentTest.cpp  tlvTest.cpp
tests/unit/crypto/: CMakeLists.txt  aesGcmTest.cpp  ecdhTest.cpp  ecdsaTest.cpp  hkdfTest.cpp  keySerializerTest.cpp  mbedTlsTest.cpp  randomTest.cpp  secureChannelTest.cpp
tests/unit/device/: CMakeLists.txt  deviceSessionTest.cpp
tests/unit/reader/: CMakeLists.txt  readerSessionTest.cpp
tests/unit/transport/: CMakeLists.txt  pcscTransportTest.cpp  simTransportTest.cpp
